--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^0.7.0
   provider: ^4.3.3
   flutter_spinkit: ^4.1.2+1
+  equatable: ^1.2.6
 
 
 dev_dependencies:
