--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dependencies:
   firebase_auth: ^0.20.0+1
   cloud_firestore: ^0.16.0
   firebase_core: ^0.7.0
-  provider: ^4.3.3
   flutter_spinkit: ^4.1.2+1
   equatable: ^1.2.6
+  flutter_riverpod: ^0.12.4
 
 
 dev_dependencies:
