--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   equatable: ^1.2.6
   flutter_riverpod: ^0.12.4
+  fl_chart: ^0.12.2
 
 
 dev_dependencies:
